force-app/main/default/objects/Challenge__c/Challenge__c.object-meta.xml
<CustomObject>
    <description>Object to store the challenge information.</description>
    <label>Challenge</label>
    <nameField>
        <label>Challenge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Challenges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>