force-app/main/default/objects/Challenge__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the Challenge, with the purpose and rules specific to the challenge.</description>
    <label>Description</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>