force-app/main/default/objects/Challenge__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The last day of the Challenge.</description>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>