force-app/main/default/objects/Challenge__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Manager of the Challenge.</description>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChallengeManaged</relationshipName>
    <type>Lookup</type>
</CustomField>