force-app/main/default/objects/Challenge__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <description
  >Who participates to the challenge, either the users or the concerned roles.</description>
    <label>Participants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>