force-app/main/default/objects/Challenge__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description
  >The result of the Challenge, was it achieved, who won or any other information about the ended Challenge.</description>
    <label>Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>