force-app/main/default/objects/Challenge__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <description>The reward won by the winner of the Challenge.</description>
    <label>Reward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>