force-app/main/default/objects/Challenge__c/fields/SlackChannel__c.field-meta.xml
<CustomField>
    <fullName>SlackChannel__c</fullName>
    <description
  >The slack channel corresponding to the Challenge, it is used to post messages related to this challenge and to interact on the topic.</description>
    <label>SlackChannel</label>
    <type>TextArea</type>
</CustomField>