force-app/main/default/objects/Challenge__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>The date the Challenge start.</description>
    <label>StartDate</label>
    <type>Date</type>
</CustomField>