force-app/main/default/objects/Challenge__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Draft&apos;</defaultValue>
    <description>The Status of the Challenge, it can be:
Draft: Challenge in preparation, not ready to be started.
ToStart: Challenge ready to be started, all informations are set.
OnGoing: The Challenge has started and is running.
Finished: The Challenge is over.
Cancelled: The Challenge has been cancelled.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>ToStart</fullName>
            </value>
            <value>
                <fullName>OnGoing</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>