force-app/main/default/objects/Challenge__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of the Challenge:
Personal: The salesperson work for themselves to be the number one on the challenge.
Team: The team of salesperson work together to achieve the goal.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>