force-app/main/default/objects/Challenge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Description__c</columns>
    <columns>Manager__c</columns>
    <columns>SlackChannel__c</columns>
    <columns>Participants__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>